src/main/java/org/example/springv3/core/error/ex/Exception500.java
package org.example.springv3.core.error.ex;

// 인증관련
public class Exception500 extends RuntimeException {
    public Exception500(String message) {
        super(message);
    }
}
